# keylex

./: .gitignore  pyproject.toml  tox.ini
keylex/matchers/: __init__.py  acronym_synonym_match.py  base.py  case_insensitive_match.py  exact_match.py  fuzzy_match.py  matcher.py  morphological_match.py  ner_match.py  phrase_match.py  pipeline.py  pos_dependency_matcher.py  proximity_match.py  regex_matcher.py
